<resources>
    <string name="app_name">Quizify</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="app_id">1558549994411804</string>
    <string name="title_activity_front_quizify">FrontQuizify</string>
    <string name="notificationTitle">Head service</string>
    <string name="notificationText">Tap to configure.</string>
    <string name="menu_item">Progress</string>
    <string name="mainQuiz">MainQuiz</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="drawer_open">Drawer is Open</string>
    <string name="drawer_close">Drawer is Closed</string>
    <string name="action_refresh">Refresh</string>
    <string name="logout">Logout</string>
    <string name="subscribe">Subscribe Notifications</string>
    <string name="pending_notifications">Recent Activity</string>

    <string name="gcm_send_message">Token retrieved and sent to server! You can now use gcmsender to
        send downstream messages to this app.</string>
    <string name="registering_message">Generating InstanceID token...</string>

    <string name="token_error_message">An error occurred while either fetching the InstanceID token,
        sending the fetched token to the server or subscribing to the PubSub topic. Please try
        running the sample again.</string>
    <string name="gcm_defaultSenderId">428518066860</string>
    <string name="invite">App Invite</string>
    <string name="share_score">Share Score</string>
    <string name="answer_sheet">Answer Sheet</string>
    <string name="rate_app">Rate App</string>
    <string name="suggest_bug">Bug Report/Suggest</string>
    <string name="about">About Quizify</string>
    <string name="profile">Your Profile</string>
    <string name="title_activity_splash">splash</string>

</resources>
