<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
     >
    <item
        android:id="@+id/invite"
        android:orderInCategory="100"
        android:title="@string/invite"
        app:showAsAction="never"/>
    <item
        android:id="@+id/subscribe"
        android:orderInCategory="100"
        android:title="@string/subscribe"
        app:showAsAction="never"/>

    <item
        android:id="@+id/about"
        android:orderInCategory="100"
        android:title="@string/about"
        app:showAsAction="never"/>

    <item
        android:id="@+id/logout"
        android:orderInCategory="100"
        android:title="@string/logout"
        app:showAsAction="never"/>

    <item android:id="@+id/view_profile"
        android:icon="@drawable/profile"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />



</menu>